<resources>
    <string name="app_name">Tormentita</string>

    <string name="action_settings">Opciones</string>
    <string name="error_title">Oops! Algo salio mal!</string>
    <string name="error_message">Hubo un error. Intentalo de nuevo.</string>
    <string name="error_ok_button">OK</string>
    <string name="network_unavailable">No tienes internet!</string>
    <string name="title_activity_daily_forecast_activtiy">Clima por Dia</string>
    <string name="no_daily_forecast_data">No hay informacion que mostrar :/</string>
    <string name="title_activity_hourly_forecast">Clima por Hora</string>
    <string name="loading_forecast">Obteniendo informacion del clima</string>
    <string name="no_location">Buscando…</string>
    <string name="temperature_loading">---</string>
    <string name="time_loading">…</string>
    <string name="percent_loading">--%</string>
    <string name="label_hourly">Por hora</string>
    <string name="label_daily">Por dia</string>
    <string name="label_humidity">Humedad</string>
    <string name="label_precip_chance">Precipitacion</string>
    <string name="daily_forecast_title">Esta semana</string>
    <string name="hardcoded_location_label">Guaymas, Son</string>
    <string name="content_desc_refresh">Boton de Actualizar</string>
    <string name="content_desc_degree_sign">grados</string>
    <string name="unknow_city">Desconocida</string>
    <string name="unreachable_city">No disponible</string>
    <string name="label_minTemp">Minima</string>
    <string name="label_maxTemp">Maxima</string>
    <string name="label_wind">Viento</string>
    <string name="label_sunrise">Amanecer</string>
    <string name="label_sunset">Atardecer</string>
    <string name="timeValue">Ahora</string>
</resources>
