<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_background"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_alignTop="@+id/linearLayout5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/temperatureLabel"
        android:layout_toStartOf="@+id/temperatureLabel">

        <TextView
            android:id="@+id/sunriseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_sunrise"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/sunriseValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/temperature_loading"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout4"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:id="@+id/linearLayout5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/sunsetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_sunset"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/sunsetValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/temperature_loading"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_alignTop="@+id/iconImageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:id="@+id/windLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_wind"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/windValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/temperature_loading"
            android:textColor="@android:color/white"
            android:textSize="@dimen/data_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/maxTempLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_maxTemp"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/maxTempValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/temperature_loading"
            android:textColor="@android:color/white"
            android:textSize="@dimen/data_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/minTempLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/label_minTemp"
            android:textColor="#80FFFFFF" />

        <TextView
            android:id="@+id/minTempValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/temperature_loading"
            android:textColor="@android:color/white"
            android:textSize="@dimen/data_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/temperature_loading"
        android:textColor="@android:color/white"
        android:textSize="@dimen/temp_text_big" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/degreeSign"
        android:layout_toEndOf="@+id/temperatureLabel"
        android:layout_alignTop="@+id/temperatureLabel"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:src="@drawable/degree"
        android:layout_marginTop="@dimen/degree_sign_position"
        android:contentDescription="@string/content_desc_degree_sign" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/timeValue"
        android:textColor="#80ffffff"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_location"
        android:id="@+id/locationLabel"
        android:layout_above="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/location_bottom_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/data_text_size" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iconImageView"
        android:layout_alignBottom="@+id/locationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/cloudy_night" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureLabel"
        android:layout_alignLeft="@+id/iconImageView"
        android:layout_alignStart="@+id/iconImageView"
        android:id="@+id/linearLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_humidity"
                android:id="@+id/humidityLabel"
                android:textColor="#80FFFFFF"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent_loading"
                android:id="@+id/humidityValue"
                android:textColor="@android:color/white"
                android:textSize="@dimen/data_text_size"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precipLabel"
                android:text="@string/label_precip_chance"
                android:textColor="#80ffffff"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percent_loading"
                android:id="@+id/precipValue"
                android:textColor="@android:color/white"
                android:textSize="@dimen/data_text_size"
                android:singleLine="true"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_forecast"
        android:id="@+id/summaryLabel"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/summary_top_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/label_text_size"
        android:gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refreshImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:longClickable="true"
        android:src="@drawable/refresh"
        android:contentDescription="@string/content_desc_refresh" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/refreshImageView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/label_hourly"
            android:id="@+id/hourlyButton"
            style="@style/forecast_button" />

        <Button
            android:text="@string/label_daily"
            android:id="@+id/dailyButton"
            android:layout_marginLeft="2dp"
            style="@style/forecast_button" />
    </LinearLayout>

</RelativeLayout>
